--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
     </head>
     <body>
-        <angular-tour-of-heroes-root></angular-tour-of-heroes-root>
+        <app-root></app-root>
     </body>
 </html>
